# CSOPESY

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Console.h  ConsoleManager.cpp  ConsoleManager.h  MainConsole.cpp  MainConsole.h  MarqueeConsole.cpp  MarqueeConsole.h  README.md  config.txt  globals.h  main.cpp
src/: Bootstrap.cpp  Bootstrap.h  Console.h  ConsoleManager.cpp  ConsoleManager.h  MainConsole.cpp  MainConsole.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  Screen.cpp  Screen.h  config.txt  globals.h  main.cpp
src/instructions/: IAdd.cpp  IAdd.h  IDeclare.cpp  IDeclare.h  IFor.cpp  IFor.h  IPrint.cpp  IPrint.h  ISleep.cpp  ISleep.h  ISubtract.cpp  ISubtract.h  Instruction.h
